--- a/style.ini
+++ b/style.ini
@@ -25,11 +25,11 @@ _fileuploader.css = screen
 rtl.css           = rtl
 print.css         = print
 
-arctic_layout.css = screen
-arctic_design.css = screen
-arctic_media.css  = screen
-arctic_rtl.css    = rtl
-arctic_print.css  = print
+arctictut_layout.css = screen
+arctictut_design.css = screen
+arctictut_media.css  = screen
+arctictut_rtl.css    = rtl
+arctictut_print.css  = print
 
 ; This section is used to configure some placeholder values used in
 ; the stylesheets. Changing this file is the simplest method to
